# key-shards

./: .prettierignore  Cargo.toml  README.md  components.json  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: main.yml
key-shards/: .eslintignore  README.md  index.html  tsconfig.json
key-shards/src/: main.ts
key-shards/src-tauri/icons/: icon.icns
key-shards/src-tauri/src/: building_secret.rs  exporting_shares.rs  padding.rs  password.rs
key-shards/src/lib/components/: advancedoptions.svelte  predefinedshares.svelte  slideup.svelte
key-shards/src/lib/components/apprail/: apprail.svelte  (+1 more)
key-shards/src/lib/icons/: copy.svelte  exit.svelte  info.svelte  square-stack.svelte
key-shards/src/pages/: combine.svelte  password.svelte
rust-bip39/: README.md
rust-bip39/src/: lib.rs
shami_rs/: README.md
src/: App.svelte  app.svelte  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: building_secret.rs  building_shares.rs  importing_shares.rs  main.rs  password.rs
src/lib/: Combine.svelte  Create.svelte
src/lib/components/: accordionitem.svelte  advancedoptions.svelte  predefinedshares.svelte  slideup.svelte  tooltipbuilder.svelte
src/lib/components/AppRail/: AppRail.svelte  AppRailAnchor.svelte  AppRailTile.svelte
src/lib/components/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
src/lib/components/apprail/: apprailanchor.svelte
src/lib/components/input/: input.svelte
src/lib/components/label/: label.svelte
src/lib/components/select/: select-item.svelte  select-trigger.svelte
src/lib/components/slider/: slider.svelte
src/lib/components/tabs/: tabs-content.svelte
src/lib/components/textarea/: textarea.svelte
src/lib/components/tooltip/: tooltip-content.svelte
src/lib/icons/: combine.svelte  key-round.svelte
src/lib/pages/: combine.svelte  create.svelte  result.svelte  secret.svelte  shares.svelte
src/pages/: combine.svelte  create.svelte  info.svelte  password.svelte  shares.svelte
src/routes/: +layout.svelte
(+21 files in other folders)
