[package]
name = "keyshards"
version = "0.1.0"
description = "An app utilizing Shamir's Secret Sharing Scheme to allow the secure backup of keys."
authors = ["Euan Deas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shami_rs = { git = "https://github.com/euandeas/shami_rs" }
bip39 = { git = "https://github.com/euandeas/rust-bip39", features = ["all-languages", "low_ent"] }
base64 = "0.22.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
